# dbt-vitals

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: labels.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dbt-vitals.yml  e2e.yml  isotrope.yml  release.yml
models/: fct_orders.sql  stg_ghost.sql  stg_orphan.sql  stg_users.sql
models/staging/: stg_customers.sql
src/: base_adapter.py  config.py  diff_engine.py  main.py  manifest_engine.py  reporter.py  snowflake_adapter.py
src/adapters/: base.py  factory.py  snowflake_adapter.py
test-dbt-repo/models/: stg_users.sql
tests/: test_config.py  test_diff_engine.py  test_factory.py  test_main.py  test_manifest_engine.py  test_reporter.py  test_snowflake_adapter.py
tests/fixtures/: manifest.json
