[project]
name = "isotrope"
version = "0.1.0"
description = "Warehouse-agnostic dbt linter. Reports size and last-read stats for deleted models as a GitHub PR comment."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python[secure-local-storage]>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
