[project]
name = "dbt-vitals"
version = "0.1.0"
description = "Warehouse impact report for deleted dbt models. Reports size, reads, and lineage as a GitHub PR comment."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Laskr", email = "john@laskrconsulting.com"},
]

[project.urls]
Repository = "https://github.com/Laskr/dbt-vitals"
Homepage = "https://github.com/Laskr/dbt-vitals"
dependencies = [
    "gitpython>=3.1.46",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python[secure-local-storage]>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
